    call pdb directly, don't call Python recursively.

  From Christoph Wiedemann

  - Have the g++ Tool actually use g++ in preference to c++.

  - Have the gcc Tool actually use gcc in preference to cc.

  - Add a gnutools.py test of the GNU tool chain.

  - Be smarter about linking: use $CC by default and $CXX only if we're
    linking with any C++ objects.



RELEASE 0.90 - Wed, 25 Jun 2003 14:24:52 -0500

  From Chad Austin:

  - Fix the _concat() documentation, and add a test for it.

  - Portability fixes for non-GNU versions of lex and yacc.

  From Matt Balvin:

  - Fix handling of library prefixes when the subdirectory matches
    the prefix.

  From Timothee Bessett:

  - Add an M4 Builder.

  From Charles Crain:

  - Use '.lnk' as the suffix on the temporary file for linking long
    command lines (necessary for the Phar Lap linkloc linker).

  - Save non-string Options values as their actual type.

  - Save Options string values that contain a single quote correctly.

  - Save any Options values that are changed from the default
    Environment values, not just ones changed on the command line or in
    an Options file.

  - Make closing the Options file descriptor exception-safe.

  From Steven Knight:

  - SCons now enforces (with an error) that construction variables
    must have the same form as valid Python identifiers.

  - Fix man page bugs: remove duplicate AddPostAction() description;
    document no_import_lib; mention that CPPFLAGS does not contain
    $_CPPINCFLAGS; mention that F77FLAGS does not contain $_F77INCFLAGS;
    mention that LINKFLAGS and SHLINKFLAGS contains neither $_LIBFLAGS
    nor $_LIBDIRFLAGS.

  - Eliminate a dependency on the distutils.fancy_getopt module by
    copying and pasting its wrap_text() function directly.

  - Make the Script.Options() subclass match the underlying base class
    implementation.

  - When reporting a target is up to date, quote the target like make